# qtextseek

./: CMakeLists.txt  README.md  filetraversethread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
